update tmux.conf and add refresh.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,4 +38,24 @@ bind-key h select-pane -L
 #right
 bind-key l select-pane -R
 
+set -sg escape-time 1
+
+set -g base-index 1
+
+# setw = set-window-option
 set-window-option -g pane-base-index 1
+
+bind | split-window -h
+bind - split-window -v
+
+bind -r H resize-pane -L 3
+bind -r J resize-pane -D 3
+bind -r K resize-pane -U 3
+bind -r L resize-pane -R 3
+
+setw -g mouse off
+
+set -g default-terminal "screen-256color"
+
+setw -g monitor-activity on
+set -g visual-activity on
