--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
 set -g prefix M-d
 # bind a reload key
-bind r source-file ~/.tmux.conf ; display-message "Config reloaded.."
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
