--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,9 @@ bind-key h select-pane -L
 #right
 bind-key l select-pane -R
 
+#select last window
+bind-key C-l select-window -l
+
 set -sg escape-time 1
 
 set -g base-index 1
