--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 unbind C-b
-set -g prefix M-d
+set-option -g  prefix C-y
+bind-key C-y send-prefix
+
 # bind a reload key
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 
@@ -29,16 +31,16 @@ set-window-option -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#
 set -g status-right '#[fg=green][#[fg=cygn]%Y-%m-%d#[fg=green]]'
 
 
-#up
+# up
 bind-key k select-pane -U
-#down
+# down
 bind-key j select-pane -D
-#left
+# left
 bind-key h select-pane -L
-#right
+# right
 bind-key l select-pane -R
 
-#select last window
+# select last window
 bind-key C-l select-window -l
 
 set -sg escape-time 1
@@ -56,9 +58,15 @@ bind -r J resize-pane -D 3
 bind -r K resize-pane -U 3
 bind -r L resize-pane -R 3
 
-setw -g mouse off
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -t vi-copy    C-WheelUpPane   halfpage-up
+bind -t vi-copy    C-WheelDownPane halfpage-down
 
 set -g default-terminal "screen-256color"
 
 setw -g monitor-activity on
 set -g visual-activity on
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
