--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 unbind C-b
-set-option -g  prefix C-y
-bind-key C-y send-prefix
+set-option -g  prefix M-d
+bind-key M-d send-prefix
 
 # bind a reload key
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
@@ -69,4 +69,3 @@ set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
